--- a/SupplierRanking/Views/Fornecedor/CadastroFornecedor.cshtml
+++ b/SupplierRanking/Views/Fornecedor/CadastroFornecedor.cshtml
@@ -244,7 +244,7 @@
                             </div>
 
                             <div id="wrapper-remove-pdf" class="row align-items-center justify-content-center mt-4 hide">
-                                <button>
+                                <button id="btnPdf">
                                     <img class="input-images input-remove-pdf" src="/Content/images/remove-pdf.png" />
                                 </button>
                             </div>
@@ -321,11 +321,11 @@
             </div>
 
             <!--- Botao Cadastrar --->
-            <div class="col-6 form-forn-btn d-flex align-self-center justify-content-end pr-0 hide">
+            @*<div class="col-6 form-forn-btn d-flex align-self-center justify-content-end pr-0 hide">
                 <button type="submit" id="btnCadastrar" class="login-form-btn disabled" disabled>
                     Cadastrar
                 </button>
-            </div>
+            </div>*@
         </div>
         </div>
     </div>
