--- a/SupplierRanking/Views/Shared/_Layout.cshtml
+++ b/SupplierRanking/Views/Shared/_Layout.cshtml
@@ -134,9 +134,9 @@
                 <div class="col-md-12 text-center">
                     <p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        Copyright &copy;
-                        <script>document.write(new Date().getFullYear());</script> All rights reserved | This site was made by <i class="icon-compass" aria-hidden="true">
-                        </i> by <a href="https://colorlib.com" target="_blank">Suplier Ranking</a>
+                        Supplier Ranking &copy;
+                        <script>document.write(new Date().getFullYear());</script> Todos os direitos reservados | Site desenvolvido pelos criados do Supplier Ranking <i class="icon-compass" aria-hidden="true">
+                        </i> por: <a href="Home/SobreNos" target="_blank">Luiz Gustavo | Laressa Assis | Marcelo Lemos | Valmir Junior</a>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </p>
                 </div>
