--- a/SupplierRanking/Content/css/media.css
+++ b/SupplierRanking/Content/css/media.css
@@ -21,7 +21,7 @@
 	font-weight: 500;
 	font-size: 16px;
 	margin-bottom: 0;
-	color: #0962ea;
+	color: #134e74;
 }
 
 .media-custom .media-body .position {
