--- a/SupplierRanking/Content/css/sobre_nos.css
+++ b/SupplierRanking/Content/css/sobre_nos.css
@@ -27,7 +27,7 @@
 	right: 0;
 	margin-right: -50px;
 	border-radius: 50%;
-	background: #0962ea;
+	background: #3d6c86;
 	z-index: 100;
 	top: 50%;
 	-webkit-transform: translateY(-50%);
