--- a/SupplierRanking/Views/Fornecedor/UpdateFornecedor.cshtml
+++ b/SupplierRanking/Views/Fornecedor/UpdateFornecedor.cshtml
@@ -22,7 +22,7 @@
                     <br /> <br />
                     @*<input type="text" name="confirmaSenha" placeholder="Digite sua senha">*@
                     <br /> <br />
-                    <input class="input" type="text" value="@Model.Cnpj" name="cnpj" placeholder="CNPJ">
+                    <input class="" type="text" value="@Model.Cnpj" name="cnpj" placeholder="CNPJ">
                     <br /> <br />
                     <input class="input" type="text" value="@Model.Nome_empresa" name="nome_empresa" placeholder="Nome da Empresa">
                     <br /> <br />
