--- a/SupplierRanking/Content/css/cadastro.css
+++ b/SupplierRanking/Content/css/cadastro.css
@@ -170,7 +170,7 @@
 
 .form-forn-first-part {
     position: relative;
-    top: -110%;
+    top: -27%;
 }
 
 .form-forn-first-part .input-slogan {
@@ -261,13 +261,13 @@
     flex-wrap: wrap;
     justify-content: center;
     width: 100%;
-    max-height: 150px;
+    height: 180px;
     overflow: auto;
 }
 
 .form-forn-forth-part #imagensCarregada .image-wrapper {
     position: relative;
-    margin: 1em .3em;
+    margin: 2.3em .3em;
     display: flex;
     align-items: center;
 }
