--- a/SupplierRanking/Views/Comprador/CadastroPessoaJuridica.cshtml
+++ b/SupplierRanking/Views/Comprador/CadastroPessoaJuridica.cshtml
@@ -79,21 +79,23 @@
         <form class="col-12 cadastro-form d-flex justify-content-end mt-4 pt-4 pr-2 pl-0"
               method="post" action="../Comprador/CadastroPessoaJuridica">
 
+
+            <!------------------ PRIMEIRA TELA ------------------>
             <div class="col-5 form-pj-first-part justify-content-center">
 
                 <!--- CNPJ --->
                 <div class="col-11 wrap-input p-0">
-                    <input class="input" type="text" maxlength="19" name="cnpj" placeholder="CNPJ" data-mask="00.000.000/0000-00" data-mask-sectionFocus="true" />
+                    <input class="input" type="text" maxlength="19" name="cnpj" placeholder="* CNPJ" data-mask="00.000.000/0000-00" data-mask-sectionFocus="true" />
                 </div>
 
                 <!--- Nome da Empresa --->
                 <div class="col-11 wrap-input p-0">
-                    <input class="input" type="text" name="nome_empresa" placeholder="Nome da Empresa">
+                    <input class="input" type="text" name="nome_empresa" placeholder="* Nome da Empresa">
                 </div>
 
                 <!--- Email --->
                 <div class="col-11 wrap-input p-0">
-                    <input class="input" type="email" name="email" placeholder="Email">
+                    <input class="input" type="email" name="email" placeholder="* Email">
                 </div>
 
                 <div class="col-11 row p-0 align-items-center justify-content-between">
@@ -101,12 +103,12 @@
                     <div class="col-10 p-0">
                         <!--- Senha --->
                         <div class="wrap-input">
-                            <input class="input input-senha" type="password" name="senha" placeholder="Senha">
+                            <input class="input input-senha" type="password" name="senha" placeholder="* Senha">
                         </div>
 
                         <!--- Confirmar Senha --->
                         <div class="wrap-input">
-                            <input class="input input-senha" type="password" name="confirmarSenha" placeholder="Confirmar Senha">
+                            <input class="input input-senha" type="password" name="confirmarSenha" placeholder="* Confirmar Senha">
                         </div>
                     </div>
 
@@ -125,7 +127,6 @@
                     </div>
 
                     <select name="uf" class="states text-center">
-                        <option disabled>UF</option>
                         <option value="AC">AC</option>
                         <option value="AL">AL</option>
                         <option value="AP">AP</option>
@@ -160,15 +161,17 @@
             <div class="row col-12 form-pj-second-part justify-content-between pl-5 pr-5">
                 <!--- Telefone --->
                 <div class="col-5 wrap-input">
-                    <input class="input" type="text" name="telefone" maxlength="10" placeholder="(00) 0000-0000" data-mask="(00) 0000-0000" data-mask-sectionFocus="true">
+                    <input class="input" type="text" name="telefone" maxlength="10" placeholder="* (00) 0000-0000" data-mask="(00) 0000-0000" data-mask-sectionFocus="true">
                 </div>
 
                 <!--- Celular --->
                 <div class="col-5 wrap-input pl-4 pr-0 mr-2">
-                    <input class="input" type="text" name="celular" placeholder="(00) 00000-0000" data-mask="(00) 00000-0000" data-mask-sectionFocus="true">
+                    <input class="input" type="text" name="celular" placeholder="* (00) 00000-0000" data-mask="(00) 00000-0000" data-mask-sectionFocus="true">
                 </div>
             </div>
 
+
+            <!------------------ SEGUNDA TELA ------------------>
             <div class="col-12 form-pj-third-part justify-content-between text-center pl-5 pr-5">
                 Selecione abaixo todas as categorias de fornecimento que tenha interesse: <br />
                 E não se preocupe se esquecer de alguma, pois será possível editar depois.
@@ -188,6 +191,7 @@
             </div>
         </form>
     </div>
+
 
     <div class="row col-12 cadastro-options align-items-center pl-5 pr-5">
 
