--- a/SupplierRanking/Views/Fornecedor/UpdateFuncionarioFornecedor.cshtml
+++ b/SupplierRanking/Views/Fornecedor/UpdateFuncionarioFornecedor.cshtml
@@ -12,7 +12,7 @@
 
         <h2>Editar informações</h2>
         <form action="../Fornecedor/UpdateFuncionarioFornecedor" method="post" class="login100-form validate-form" enctype="multipart/form-data">
-
+            
             <!--- Campos do Fornecedor -->
             <div id="">
                 @*<label for="imagem" style="border: 1px solid; background-color: gainsboro; padding: .5em; font-size: 12px; cursor: pointer;">Imagem de Perfil</label>
@@ -30,7 +30,7 @@
             </div>
 
             <br /> <br />
-            <button style="background: #166083;" class="btn btn-info btn-lg" id="btnAtualizar">Atualizar</button>
+            <button type="submit" style="background: #166083;" class="btn btn-info btn-lg" id="btnAtualizar">Atualizar</button>
         </form>
     </div>
 </div>
