--- a/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
+++ b/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
@@ -6,11 +6,7 @@
 }
 
 <div class="m-5">
-    <section class="pesquisa" style=" width: 2000px;height:104px;background: #0C496BE6;position: absolute;top: 0px;left: -2px;">
-
-      
-
-    </section>
+    
     <br />
     <br />
     <div class="row justify-content-center text-center mt-4">
@@ -26,7 +22,7 @@
                  if (item.Plano.Equals("P"))
                  {
                     <li class="col-12 p-4 mb-5" style="background: white;box-shadow: 0px 0px 9px black;background: #2c8cb6;
-                         box-shadow: 0px 0px 23px black;color: white;border: solid 1px #00000045;;">
+                         box-shadow: 0px 0px 23px black;color: white;border: solid 1px #00000045;width: 1557px;margin-left: 48px;">
                         <div class="row">
                             <div class="d-flex justify-content-center align-items-center mr-5" style="padding-left: 4rem;">
 
