--- a/SupplierRanking/Views/Fornecedor/UpdateFornecedor.cshtml
+++ b/SupplierRanking/Views/Fornecedor/UpdateFornecedor.cshtml
@@ -4,8 +4,7 @@
    
     Layout = "~/Views/Shared/Layout_logada.cshtml";
 }
-<section style=" width: 2000px;height: 104px;background: #0C496BE6;position: absolute;top: 0px;left:0px;">
-</section>
+
     <div class="container-login100" style="width: 946px;height: 882px;background: #fff;position: absolute;left:435px;margin-top: 163px; box-shadow: 1px 1px 27px;">
 
         <div class="wrap-login100" style="background-color: white;position: absolute;left: 41%;">
@@ -22,7 +21,7 @@
                     <br /> <br />
                     @*<input type="text" name="confirmaSenha" placeholder="Digite sua senha">*@
                     <br /> <br />
-                    <input class="" type="text" value="@Model.Cnpj" name="cnpj" placeholder="CNPJ">
+                    <input class="input " type="text" value="@Model.Cnpj" name="cnpj" placeholder="CNPJ">
                     <br /> <br />
                     <input class="input" type="text" value="@Model.Nome_empresa" name="nome_empresa" placeholder="Nome da Empresa">
                     <br /> <br />
@@ -54,7 +53,7 @@
                 </div>
 
                 <br /> <br />
-                <button style="margin-top: -62px;background: #166083;" class="btn btn-info btn-lg" id="btnAtualizar">Atualizar</button>
+                <button type="submit" style="margin-top: -62px;background: #166083;" class="btn btn-info btn-lg" id="btnAtualizar">Atualizar</button>
             </form>
         </div>
     </div>
