--- a/SupplierRanking/Views/HomeLogada/Perfil.cshtml
+++ b/SupplierRanking/Views/HomeLogada/Perfil.cshtml
@@ -84,24 +84,11 @@
             <div style=" width: 1500px;height: 1471px;background-color: white;position: absolute;left: 195px;top: 83%;
             box-shadow: 1px 13px 20px black;">
 
-
                 <section>
 
-
-
-                   
                         <h2 style="position: absolute;left: 48%;">Arquivo PDF</h2>
+                    @Model.Pdf
                         
-                       
-                   
-
-
-
-
-
-
-
-
                 </section>
                 <h2 style="margin-top: 194px;margin-left: 128px;" class="w3-center">Galeria de fotos</h2>
               
