--- a/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
+++ b/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
@@ -22,7 +22,7 @@
                  if (item.Plano.Equals("P"))
                  {
                     <li class="col-12 p-4 mb-5" style="background: white;box-shadow: 0px 0px 9px black;background: #2c8cb6;
-                         box-shadow: 0px 0px 23px black;color: white;border: solid 1px #00000045;width: 1557px;margin-left: 48px;">
+                         box-shadow: 0px 0px 23px black;color: white;border: solid 1px #00000045;">
                         <div class="row">
                             <div class="d-flex justify-content-center align-items-center mr-5" style="padding-left: 4rem;">
 
