--- a/SupplierRanking/Views/HomeLogada/RankingPremium.cshtml
+++ b/SupplierRanking/Views/HomeLogada/RankingPremium.cshtml
@@ -13,7 +13,7 @@
             if (item.Plano.Equals("P"))
             {
                 <li class="col-12 p-4 mb-5" style="background: white;box-shadow: 0px 0px 9px black;background: #2c8cb6;
-                         box-shadow: 0px 0px 23px black;color: white;border: solid 1px #00000045;width: 1557px;margin-left: 48px;">
+                         box-shadow: 0px 0px 23px black;color: white;border: solid 1px #00000045;width: 1557px;margin-left: 48px;margin-top: 18rem;">
                     <div class="row">
                         <div class="d-flex justify-content-center align-items-center mr-5" style="padding-left: 4rem;">
 
@@ -33,7 +33,60 @@
                             }
                             
                             @*</div>*@
-                            
+                            <div class="col-5">
+                                <div class="d-flex align-items-baseline pl-3">
+                                    <h4>
+                                        @item.Media
+                                    </h4>
+                                    <div class="d-flex col-10 justify-content-around pl-5">
+                                        <div>
+                                            <img />
+                                            @item.Media_qualidade
+                                        </div>
+
+                                        <div>
+                                            <img />
+                                            @item.Media_atendimento
+                                        </div>
+
+                                        <div>
+                                            <img />
+                                            @item.Media_entrega
+                                        </div>
+
+                                        <div>
+                                            <img />
+                                            @item.Media_preco
+                                        </div>
+
+                                        <div>
+                                            <img />
+                                            @item.Media_satisfacao
+                                        </div>
+                                    </div>
+                                </div>
+                                <div>
+                                    <h2 style="font-weight: bold;">
+                                        @item.Nome_empresa
+                                    </h2>
+                                </div>
+                                <div>
+                                    @item.Nome_categoria
+                                </div>
+                            </div>
+                            <div class="col-4 d-flex justify-content-between mr-5" style="flex-direction:column; border-left: 2px solid;padding-left: 5rem;">
+
+                                <h3>"@item.Slogan"</h3>
+                                <p style="color: white;">
+                                    @item.Endereco, @item.Bairro - @item.Cidade / @item.Uf
+                                </p>
+                            </div>
+                            <div class="col-1 d-flex flex-wrap justify-content-center align-items-center">
+                                <button data-target="#myModal" class="btn btn-info btn-lg" data-toggle="modal">Avaliar</button>
+
+                                @*@Html.ActionLink("Perfil", "Perfil", new { item.Cnpj })*@
+                                <a style="text-decoration: none;color: white;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">Perfil</a>
+                            </div>
                         </div>
                    </div>
                 </li>
