--- a/SupplierRanking/Views/Shared/Layout_logada.cshtml
+++ b/SupplierRanking/Views/Shared/Layout_logada.cshtml
@@ -104,7 +104,7 @@
                     </li>
                     
                     <li>
-                        <a href="/HomeLogada/RankingPremium" data-toggle="collapse" aria-expanded="false">Ranking Premium</a>
+                        <a href="/HomeLogada/RankingPremium"  aria-expanded="false">Ranking Premium</a>
                     </li>
 
                     <li >
@@ -119,7 +119,8 @@
                 
                 <div id="perfil" style="width: 100px; height: 100px; background-color: antiquewhite; border-radius: 70px; margin: 167px auto auto 20px;">
                     <a class="perfil"href="/HomeLogada/Perfil">Perfil </a>
-                    @RenderSection("Foto", false)
+                   @Session["UserFornecedor"].
+                    @*@RenderSection("UserFornecedor", false)*@
                 </div>
                     
             </nav>
@@ -186,7 +187,7 @@
             </div>
         </div>
 
-        <div class="conteudo-logada row pl-5 pr-5">
+        <div class="conteudo-logada row pl-5 pr-5 col-11">
             @RenderBody()
         </div>
 
