--- a/SupplierRanking/Views/Shared/Layout_logada.cshtml
+++ b/SupplierRanking/Views/Shared/Layout_logada.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@Model SupplierRanking.Models;
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -119,6 +120,12 @@
                 
                 <div id="perfil" style="width: 100px; height: 100px; background-color: antiquewhite; border-radius: 70px; margin: 167px auto auto 20px;">
                     <a class="perfil"href="/HomeLogada/Perfil">Perfil </a>
+                    @if (Session["UserFornecedor"] != null)
+                    {
+                        String imagem64 = string.Format("data:image/jpeg;base64,{0}", Model.imagem); //PRECISA ARRUMAR ESSA MERDA AQUI
+                        <img class="perfil" href="/HomeLogada/Perfil" name="imagem" src="@imagem64" height="100" width="100" />
+                    }
+
                     @RenderSection("Foto", false)
                 </div>
                     
